--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,24 @@
 {
-    "name": "srdjank90/extended-ftp",
-    "description": "Extended FTP functionality",
-    "autoload": {
-        "psr-4": {
-            "Srdjank90\\ExtendedFtp\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Srdjan Kordic",
-            "email": "srdjank90@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "srdjank90/extended-ftp",
+  "description": "Extended FTP functionality",
+  "keywords": [
+    "ftp",
+    "upload",
+    "ftp-transfer"
+  ],
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Srdjank90\\ExtendedFtp\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Srdjan Kordic",
+      "email": "srdjank90@gmail.com"
+    }
+  ],
+  "require": {
+    "php": ">=8.0.0"
+  }
 }
